fix: add github logo more visible in dark mode

--- a/styles/index.css
+++ b/styles/index.css
@@ -33,6 +33,7 @@ section.text-block {
 
 #projects-title {
     margin-bottom: 40px;
+    margin-top: 60px;
 }
 
 #projects-thumbnails {
